--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@font-face {
+  font-family: 'Child Witch';
+  src: url('../../assets/fonts/ChildWitch-z8ABL.ttf') format('truetype')
+}
 
 #backvid {
   position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 0;
   left: 0;
   width: 100vw;
@@ -9,40 +15,80 @@
   overflow: hidden;
 }
 #backvid video {
-  object-fit: cover;
+  transition: 0.6s;
+  align-self: center;
   object-position: center;
+  object-fit: cover;
+  opacity: 0;
+}
+#backvid video[src] {
+  opacity: 1;
 }
 
 .page.home .content {
   display: grid;
   gap: 2%;
   grid-template-columns: 3fr 1fr;
-  grid-template-rows: repeat(20, 1fr);
+  grid-template-rows: 60vh 65vh auto;
   padding: 3% 5%;
-  height: 150vh;
+  overflow: overlay;
+}
+
+#bauble-container {
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 115%;
+  height: 100%;
+  padding: 20% 0;
+  justify-content: space-between;
+  border: none;
+  pointer-events: none;
+}
+
+#bauble-container .bauble {
+  width: 15%;
+  animation: float 3s ease-in-out 0s infinite alternate forwards;
+}
+#bauble-container .bauble:nth-child(odd) {
+  margin-right: auto;
+}
+#bauble-container .bauble:nth-child(even) {
+  margin-left: auto;
 }
 
 .page.home .content .card.info {
-  display: flex;
-  flex-flow: row;
   width: 90%;
-  padding: 0 10%;
+  padding: 0 10% 5%;
   justify-self: right;
-  justify-content: center;
-  align-items: flex-start;
   grid-column: 1;
-  grid-row: 1 / 18;
+  grid-row: 1 / 4;
   text-align: center;
+}
+
+.page.home .content .card.info .header {
+  margin-bottom: 4%;
+  letter-spacing: -0.12rem;
 }
 
 .page.home .content .card.info .welcome .header {
   border-bottom: 2px solid var(--bs-dark);
-  margin-bottom: 4%;
+}
+.page.home .content .card.info .welcome .header .name {
+  font-family: 'Child Witch', var(--bs-font-sans-serif);
 }
 
-.page.home .content .card.info .welcome .header h2 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold !important;
+.page.home .content .card.info > *:not(:last-child) {
+  border-bottom: 1px solid var(--bs-dark);
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+}
+
+.page.home .content .card.info .welcome .header .logo {
+  width: 14vw;
 }
 
 .page.home .content .card.info .welcome .body {
@@ -54,6 +100,32 @@
   aspect-ratio: 15.99 / 9; /* HAVE TO DO THIS TO REMOVE WEIRD BLACK LINE ON LEFT OF VIDEO */
 }
 
+.page.home .content .card.info .description li {
+  margin: 1rem;
+  font-size: large;
+  text-align: justify;
+}
+.page.home .content .card.info .description li::marker {
+  font-size: x-large;
+}
+
+.page.home .content .card.info .blurb:not(:first-child) {
+  margin-top: 5%;
+}
+
+.page.home .content .card.info .blurb .body {
+  display: flex;
+  align-items: center;
+  gap: 4%;
+  font-size: x-large;
+}
+.page.home .content .card.info .blurb .body video {
+  width: 50%;
+  height: fit-content;
+  border-radius: 10% 5%;
+  box-shadow: -2px 5px 5px var(--bs-darker);
+}
+
 .page.home .content .card.widget {
   grid-column: 2;
   justify-self: left;
@@ -62,13 +134,54 @@
 }
 
 .page.home .content .card.discord {
-  grid-row: 1 / 7;
+  grid-row: 1 / 2;
 }
 
 .page.home .content .card.trello {
-  grid-row: 7 / 12;
+  grid-row: 2 / 3;
 }
 
-.page.home .content .card.info .logo {
-  width: 10vw;
+@media (max-width: 1000px) {
+  .page.home .content {
+    grid-template-columns: 1fr;
+    padding: 3% 2%;
+  }
+
+  .page.home .content .card.info {
+    justify-self: center;
+    width: 95%;
+    padding: 0 5% 5%;
+  }
+
+  .page.home .content .card.info .blurb:not(:last-child) {
+    margin-bottom: 30%;
+  }
+  .page.home .content .card.info .blurb .body {
+    flex-flow: column;
+  }
+  .page.home .content .card.info .blurb .body p {
+    text-align: justify;
+    text-align-last: center;
+  }
+  .page.home .content .card.info .blurb .body video {
+    width: 100%;
+  }
+
+  .page.home .content .card.discord {
+    display: none;
+  }
+
+  .page.home .content .card.trello {
+    display: none;
+  }
+}
+
+@keyframes float {
+  from {
+    transform: translateY(0.5rem);
+    filter: drop-shadow(0 1rem 10px rgba(0, 0, 0, 0.5));
+  } to {
+    transform: translateY(-0.5rem);
+    filter: drop-shadow(0 2rem 20px rgba(0, 0, 0, 0.5));
+  }
 }
