--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @font-face {
   font-family: 'Child Witch';
-  src: url('../../assets/fonts/ChildWitch-z8ABL.ttf') format('truetype')
+  src: url('../../assets/fonts/ChildWitch-z8ABL.ttf') format('truetype');
 }
 
 #backvid {
