--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
@@ -7,6 +7,7 @@
   align-items: center;
   top: -1px;
   width: 100%;
+  height: var(--navbar-height);
   padding-left: 0.8vh;
   padding-bottom: 0.2rem;
   background: var(--bs-dark);
