--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -8,8 +8,9 @@
   padding: 0.3% 0;
 }
 
-.page.glossary .content .blowup {
+.page.glossary .content .blowup-area {
   flex: 2;
+  padding-top: 2%;
 }
 
 .page.glossary .index .categories {
@@ -34,11 +35,13 @@
   opacity: 0.2;
 }
 .page.glossary .index .categories .category::before {
-  margin-left: -0.5rem;
+  margin-left: -0.6rem;
+  margin-right: 0.1rem;
 }
 
 .page.glossary .index .categories .category::after {
-  margin-right: -0.5rem;
+  margin-right: -0.6rem;
+  margin-left: 0.1rem;
 }
 .page.glossary .index .categories .category:hover {
   background: var(--main);
@@ -61,12 +64,24 @@
 
 .page.glossary .index .entries .entry {
   transition: 0.2s;
-  position: relative;
   width: 7vw;
   margin: 1%;
   cursor: pointer;
 }
-.page.glossary .index .entries .entry::before {
+.page.glossary .index .entries .entry:hover {
+  transform: scale(1.05);
+}
+.page.glossary .index .entries .entry .icon {
+  position: relative;
+  overflow: hidden;
+}
+.page.glossary .index .entries .entry .icon img {
+  width: 100%;
+  image-rendering: pixelated;
+  border: 1px solid gray;
+  border-radius: 25px;
+}
+.page.glossary .index .entries .entry .icon::before {
   transition: 0.2s;
   content: '';
   display: block;
@@ -77,20 +92,49 @@
   border-radius: 25px;
   clip-path: polygon(0 0, 0% 30%, 40% 0);
 }
-.page.glossary .index .entries .entry:hover {
-  transform: scale(1.05);
-}
-.page.glossary .index .entries .entry:hover::before {
+.page.glossary .index .entries .entry:hover .icon::before {
   clip-path: polygon(0 0, 0% 70%, 80% 0);
   background: rgba(255, 255, 255, 0.6);
-}
-.page.glossary .index .entries .entry img {
-  width: 100%;
-  image-rendering: pixelated;
-  border: 1px solid gray;
-  border-radius: 25px;
 }
 .page.glossary .index .entries .entry .caption {
   display: block;
   text-align: center;
+}
+
+.page.glossary .content .blowup-area .blowup {
+  width: 85%;
+  margin-left: 5%;
+  padding: 1%;
+  border-radius: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.page.glossary .content .blowup-area .blowup .identity {
+  display: flex;
+  flex-flow: column;
+  padding: 1% 5%;
+  background: var(--frost-back);
+  border-radius: 30px;
+}
+.page.glossary .content .blowup-area .blowup .identity .icon {
+  width: 8vw;
+  align-self: center;
+  background: rgba(139, 139, 139, 0.8);
+  border: 2px solid;
+  border-color: #373737 #FFF #FFF #373737;
+}
+.page.glossary .content .blowup-area .blowup .identity .icon img {
+  width: 100%;
+  image-rendering: pixelated;
+}
+.page.glossary .content .blowup-area .blowup .identity .underscore {
+  display: flex;
+  justify-content: space-between;
+}
+.page.glossary .content .blowup-area .blowup .identity .name {
+  font-size: 3rem;
+}
+.page.glossary .content .blowup-area .blowup .identity .id {
+  display: block;
+  font-size: 1rem;
 }
