--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
@@ -7,6 +7,7 @@
   --semifrost-back: rgba(38, 39, 43, 0.2);
   --frost-back: rgba(38, 39, 43, 0.4);
   --superfrost-back: rgba(38, 39, 43, 0.2);
+  --antifrost-back: rgba(146, 149, 165, 0.2);
   --link: #5969d4;
   --link-hover: #4653a1;
   --bs-darker: #292929;
@@ -65,6 +66,10 @@ ul:last-child {
 .semifrosted {
   background: var(--semifrost-back);
   backdrop-filter: blur(5px);
+}
+.antifrosted {
+  background: var(--antifrost-back);
+  backdrop-filter: blur(2px);
 }
 
 .question {
