--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -1,11 +1,13 @@
 .page.glossary .content {
   display: flex;
+  position: relative;
+  height: 0; /* Disable scrolling of main document on page */
+  overflow-x: auto;
 }
 
 .page.glossary .content .index {
   flex: 1;
-  height: calc(100vh - var(--navbar-height));
-  padding: 0.3% 0;
+  padding-top: 0.3%;
 }
 
 .page.glossary .content .blowup-area {
@@ -58,13 +60,13 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   height: 100%;
-  padding-bottom: 10%;
+  padding-bottom: 10vh;
   overflow: auto;
 }
 
 .page.glossary .index .entries .entry {
   transition: 0.2s;
-  width: 7vw;
+  width: 7rem;
   margin: 1%;
   cursor: pointer;
 }
@@ -117,7 +119,7 @@
   border-radius: 30px;
 }
 .page.glossary .content .blowup-area .blowup .identity .icon {
-  width: 8vw;
+  width: 8rem;
   align-self: center;
 }
 .page.glossary .content .blowup-area .blowup .identity .icon img {
@@ -140,9 +142,43 @@
 @media (max-width: 800px) {
   .page.glossary .content .index {
     transition: 0.2s ease-out;
-    flex: 0;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    transform: translateX(-50%);
+    opacity: 0.2;
+    z-index: 1;
+  }
+  .page.glossary .content .index::before { /* Disable selecting an item on mobile until extended */
+    transition: 1s;
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+  .page.glossary .content .index:not(:hover)::after { /* Disable selecting an item on mobile until extended */
+    content: '>';
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-right: 1rem;
+    background: var(--frost-back);
+    font-size: 10rem;
+    justify-content: flex-end;
+    align-items: center;
+    pointer-events: none;
+    z-index: 2;
   }
   .page.glossary .content .index:hover {
-    flex: 1;
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .page.glossary .content .index:hover::before {
+    z-index: -1;
   }
 }
