--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
@@ -1,12 +1,22 @@
 @font-face {
   font-family: 'Mojang';
   src: url('../../assets/fonts/Mojang-Regular.ttf') format('truetype');
-  font-weight: normal
+  font-weight: normal;
 }
 
 :root {
   --crafting-table-grid-scaler: 1.2;
   --furnace-grid-scaler: 1.2;
+  --kettle-grid-scaler: 1.2;
+}
+
+.minecraft {
+  padding: 0.375em;
+  letter-spacing: -0.5px;
+  word-spacing: 6px;
+  line-height: 1.25em;
+  white-space: nowrap;
+  margin: 0.125em 0.25em;
 }
 
 .crafting-grid {
@@ -55,7 +65,7 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-start;
   width: calc(180px * var(--furnace-grid-scaler));
-  height: calc(144px * var(--furnace-grid-scaler));
+  height: calc(124px * var(--furnace-grid-scaler));
   background: url('../../assets/images/crafting_guis/furnace.png') no-repeat;
   background-size: cover;
   image-rendering: pixelated;
@@ -66,8 +76,8 @@
   flex-flow: column;
   justify-content: space-between;
   width: calc((36px * var(--furnace-grid-scaler)) + (8px * var(--furnace-grid-scaler)));
-  height: calc((108px * var(--furnace-grid-scaler)) + (28px * var(--furnace-grid-scaler)));
-  padding-top: calc(28px * var(--furnace-grid-scaler));
+  height: calc((108px * var(--furnace-grid-scaler)) + (8px * var(--furnace-grid-scaler)));
+  padding-top: calc(8px * var(--furnace-grid-scaler));
   padding-left: calc(8px * var(--furnace-grid-scaler));
 }
 
@@ -76,7 +86,6 @@
   justify-content: flex-end;
   align-self: center;
   padding-right: calc(8px * var(--furnace-grid-scaler));
-  padding-top: calc(20px * var(--furnace-grid-scaler));
 }
 
 .crafting-grid.furnace .product .slot {
@@ -88,19 +97,72 @@
 .crafting-grid.furnace .progress-arrow {
   width: calc(48px * var(--furnace-grid-scaler));
   height: calc(34px * var(--furnace-grid-scaler));
-  top: calc(66px * var(--furnace-grid-scaler));
+  top: calc(46px * var(--furnace-grid-scaler));
   left: calc(56px * var(--furnace-grid-scaler));
-  animation: progress 2s linear 0s infinite normal forwards;
+  animation: progress 2s steps(16, end) 0s infinite normal forwards;
 }
 
 .crafting-grid.furnace .smelting-flames {
   width: calc(28px * var(--furnace-grid-scaler));
   height: calc(28px * var(--furnace-grid-scaler));
-  top: calc(68px * var(--furnace-grid-scaler));
+  top: calc(48px * var(--furnace-grid-scaler));
   left: calc(12px * var(--furnace-grid-scaler));
-  animation: flame 2s linear 0s infinite normal forwards;
+  animation: flame 2s steps(16, end) 0s infinite normal forwards;
 }
 /* FURNACE */
+
+/* KETTLE */
+.crafting-grid.kettle {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: flex-start;
+  width: calc(256px * var(--kettle-grid-scaler));
+  height: calc(132px * var(--kettle-grid-scaler));
+  background: url('../../assets/images/crafting_guis/kettle.png') no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+}
+
+.crafting-grid.kettle .recipe {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: calc((24px * var(--kettle-grid-scaler) * 3) + (30px * var(--kettle-grid-scaler)));
+  height: calc((36px * var(--kettle-grid-scaler) * 3) + (12px * var(--kettle-grid-scaler)));
+  padding-top: calc(12px * var(--kettle-grid-scaler));
+  padding-left: calc(30px * var(--kettle-grid-scaler));
+}
+
+.crafting-grid.kettle .product {
+  display: flex;
+  justify-content: flex-end;
+  align-self: center;
+  padding-right: calc(28px * var(--kettle-grid-scaler));
+}
+
+.crafting-grid.kettle .product .slot {
+  width: calc(52px * var(--kettle-grid-scaler));
+  height: calc(52px * var(--kettle-grid-scaler));
+  padding: 3px;
+}
+
+.crafting-grid.kettle .progress-arrow {
+  width: calc(48px * var(--kettle-grid-scaler));
+  height: calc(32px * var(--kettle-grid-scaler));
+  top: calc(50px * var(--kettle-grid-scaler));
+  left: calc(116px * var(--kettle-grid-scaler));
+  animation: progress 2s steps(16, end) 0s infinite normal forwards;
+}
+/* KETTLE */
+
+.crafting-grid .title {
+  position: absolute;
+  right: 3px;
+  font-family: Mojang, 'Gill Sans', sans-serif;
+  font-size: 14px;
+  color: #555;
+  text-shadow: 0.125em 0.125em 0 #151515;
+}
 
 .crafting-grid .slot {
   width: calc(36px * var(--crafting-table-grid-scaler));
@@ -115,15 +177,9 @@
   position: fixed;
   background: rgba(16, 0, 16, 0.9);
   color: white;
-  padding: 0.375em;
+  text-shadow: 0.125em 0.125em 0 #3f3f3f;
   font-family: Mojang, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
-  letter-spacing: -0.5px;
-  word-spacing: 6px;
-  line-height: 1.25em;
-  text-shadow: 0.125em 0.125em 0 #3f3f3f;
-  white-space: nowrap;
-  margin: 0.125em 0.25em;
   pointer-events: none;
   visibility: hidden;
   opacity: 1;
@@ -158,6 +214,11 @@
   width: 100%;
   height: 100%;
   image-rendering: pixelated;
+}
+
+.crafting-grid .pause {
+  position: absolute;
+  border-radius: 10px 0;
 }
 
 .crafting-grid .decorations {
