--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0');
+
 :root {
   --main: #7a2a91;
   --accent: #9a39b4;
