--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -16,6 +16,8 @@
 .page.glossary .content .blowup-area {
   flex: 2;
   padding-top: 2%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .page.glossary .index .categories {
@@ -71,6 +73,8 @@
 .page.glossary .index .entries {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  align-content: baseline;
   flex-wrap: wrap;
   height: 100%;
   padding-bottom: 10vh;
@@ -216,6 +220,7 @@
   .page.glossary .content .index:hover {
     transform: translateX(0%);
     opacity: 1;
+    animation: hint 0s ease-in-out 0s 1 normal none; /* Force index open on hover */
   }
   .page.glossary .content .index:hover::before {
     z-index: -1;
