--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
@@ -12,6 +12,7 @@
 
 .minecraft {
   padding: 0.375em;
+  font-family: Mojang, 'Gill Sans', sans-serif;
   letter-spacing: -0.5px;
   word-spacing: 6px;
   line-height: 1.25em;
@@ -157,13 +158,13 @@
 .crafting-grid .title {
   position: absolute;
   right: 3px;
-  font-family: Mojang, 'Gill Sans', sans-serif;
   font-size: 14px;
   color: #555;
   text-shadow: 0.125em 0.125em 0 #151515;
 }
 
 .crafting-grid .slot {
+  position: relative;
   width: calc(36px * var(--crafting-table-grid-scaler));
   height: calc(36px * var(--crafting-table-grid-scaler));
   padding: 2px;
@@ -172,12 +173,22 @@
   cursor: pointer;
 }
 
+.crafting-grid .slot .count {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 0;
+  margin: 0;
+  color: white;
+  text-shadow: 0.125em 0.125em 0 #3f3f3f;
+  pointer-events: none;
+}
+
 .crafting-grid .slot .tooltip { /* Parts borrowed from https://ftb.fandom.com */
   position: fixed;
   background: rgba(16, 0, 16, 0.9);
   color: white;
   text-shadow: 0.125em 0.125em 0 #3f3f3f;
-  font-family: Mojang, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
   pointer-events: none;
   visibility: hidden;
