--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
@@ -4,12 +4,6 @@
   font-weight: normal;
 }
 
-:root {
-  --crafting-table-grid-scaler: 1.2;
-  --furnace-grid-scaler: 1.2;
-  --kettle-grid-scaler: 1.2;
-}
-
 .minecraft {
   padding: 0.375em;
   font-family: Mojang, 'Gill Sans', sans-serif;
@@ -21,6 +15,11 @@
 }
 
 .crafting-grid {
+  --crafting-table-grid-scaler: 1.2;
+  --furnace-grid-scaler: 1.2;
+  --kettle-grid-scaler: 1.2;
+  --spinning-wheel-grid-scaler: 2;
+
   position: relative;
 }
 
@@ -40,8 +39,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  width: calc((36px * var(--crafting-table-grid-scaler) * 3) + (12px * var(--crafting-table-grid-scaler)));
-  height: calc((36px * var(--crafting-table-grid-scaler) * 3) + (12px * var(--crafting-table-grid-scaler)));
+  width: calc(((36px * 3) + 12px) * var(--crafting-table-grid-scaler));
+  height: calc(((36px * 3) + 12px) * var(--crafting-table-grid-scaler));
   padding-top: calc(12px * var(--crafting-table-grid-scaler));
   padding-left: calc(12px * var(--crafting-table-grid-scaler));
 }
@@ -76,8 +75,8 @@
   display: flex;
   flex-flow: column;
   justify-content: space-between;
-  width: calc((36px * var(--furnace-grid-scaler)) + (8px * var(--furnace-grid-scaler)));
-  height: calc((108px * var(--furnace-grid-scaler)) + (8px * var(--furnace-grid-scaler)));
+  width: calc((36px + 8px) * var(--furnace-grid-scaler));
+  height: calc(((36px * 2) + 8px + 36px) * var(--furnace-grid-scaler));
   padding-top: calc(8px * var(--furnace-grid-scaler));
   padding-left: calc(8px * var(--furnace-grid-scaler));
 }
@@ -140,8 +139,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: calc((36px * var(--kettle-grid-scaler) * 3) + (14px * var(--kettle-grid-scaler)));
-  height: calc((24px * var(--kettle-grid-scaler) * 3) + (36px * var(--kettle-grid-scaler)));
+  width: calc(((36px * 3) + 14px) * var(--kettle-grid-scaler));
+  height: calc(((36px * 2) + 36px) * var(--kettle-grid-scaler));
   padding-top: calc(36px * var(--kettle-grid-scaler));
   padding-left: calc(14px * var(--kettle-grid-scaler));
 }
@@ -154,6 +153,61 @@
   animation: bubble 2s steps(16, end) 0s infinite normal forwards;
 }
 /* KETTLE */
+
+/* SPINNING WHEEL */
+.crafting-grid.spinning-wheel {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: calc(136px * var(--spinning-wheel-grid-scaler));
+  height: calc(84px * var(--spinning-wheel-grid-scaler));
+  background: url('../../assets/images/crafting_guis/spinning_wheel.png') no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+}
+
+.crafting-grid.spinning-wheel .product {
+  display: flex;
+  justify-content: center;
+  padding-top: calc(22px * var(--spinning-wheel-grid-scaler));
+}
+
+.crafting-grid.spinning-wheel .product .slot {
+  width: calc(26px * var(--spinning-wheel-grid-scaler));
+  height: calc(26px * var(--spinning-wheel-grid-scaler));
+  padding: 4px;
+}
+
+.crafting-grid.spinning-wheel .recipe {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: calc(4px * var(--spinning-wheel-grid-scaler));
+  width: calc(((18px * 3) + 17px) * var(--spinning-wheel-grid-scaler));
+  height: calc(((18px * 2) + 25px + 4px) * var(--spinning-wheel-grid-scaler));
+  padding-top: calc(25px * var(--spinning-wheel-grid-scaler));
+  padding-left: calc(17px * var(--spinning-wheel-grid-scaler));
+}
+
+.crafting-grid.spinning-wheel .recipe .slot {
+  width: calc(18px * var(--spinning-wheel-grid-scaler));
+  height: calc(18px * var(--spinning-wheel-grid-scaler));
+}
+
+.crafting-grid.spinning-wheel .recipe > *:first-child {
+  grid-column: 2;
+}
+.crafting-grid.spinning-wheel .recipe > *:not(:first-child) {
+  grid-row: 2;
+}
+
+.crafting-grid.spinning-wheel .progress-arrow {
+  width: calc(28px * var(--spinning-wheel-grid-scaler));
+  height: calc(14px * var(--spinning-wheel-grid-scaler));
+  top: calc(27px * var(--spinning-wheel-grid-scaler));
+  left: calc(58px * var(--spinning-wheel-grid-scaler));
+  animation: progress 2s steps(16, end) 0s infinite normal forwards;
+}
+/* SPINNING WHEEL */
 
 .crafting-grid .title {
   position: absolute;
@@ -219,6 +273,18 @@
   border: 0.125em solid #2D0A63;
   border-image: linear-gradient(rgba(80, 0, 255, 0.3), rgba(40, 0, 127, 0.3)) 1;
 }
+.crafting-grid .slot.missing span:not(.tooltip) {
+  padding: 0;
+  color: #ff5555;
+  text-shadow: 0.125em 0.125em 0 #3f1515;
+  font-weight: bold;
+  font-size: x-large;
+  cursor: default;
+}
+.crafting-grid .slot.missing .tooltip {
+  color: #aa0000;
+  text-shadow: 0.125em 0.125em 0 #2a0000;
+}
 
 .crafting-grid .slot img {
   width: 100%;
@@ -229,6 +295,7 @@
 .crafting-grid .pause {
   position: absolute;
   border-radius: 10px 0;
+  z-index: 1;
 }
 
 .crafting-grid .decorations,
