--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -162,9 +162,13 @@
 }
 .page.glossary .content .blowup-area .blowup .printout .identity .icon {
   width: 8rem;
+  min-width: fit-content;
+  height: 8rem;
+  padding: 4px;
 }
 .page.glossary .content .blowup-area .blowup .printout .identity .icon img {
   width: 100%;
+  height: 100%;
   image-rendering: pixelated;
 }
 
@@ -186,6 +190,12 @@
 }
 .page.glossary .content .blowup-area .blowup .printout .underscore .recipe-container .crafting-grid {
   margin-bottom: 3%;
+}
+.page.glossary .content .blowup-area .blowup .printout .underscore .recipe-container .missing-error {
+  color: var(--bs-red);
+  font-size: larger;
+  font-style: italic;
+  white-space: nowrap;
 }
 
 @media (max-width: 900px) {
@@ -251,6 +261,11 @@
   }
   .page.glossary .content .blowup-area .blowup .printout .identity .icon {
     width: 10vh;
+    height: 10vh;
+    padding: 1%;
+  }
+  .page.glossary .content .blowup-area .blowup .printout .identity .icon img {
+    vertical-align: baseline;
   }
 
   .page.glossary .content .blowup-area .blowup .printout .underscore {
